# qeirq

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: cell.rs  commands.rs  compartment.rs  event.rs  lattice.rs  main.rs  output.rs  parameters.rs  protocol.rs  randomness.rs  rates.rs  simulation.rs  subcompartments.rs  units.rs
