[package]
name = "qeirq"
description = "A simulator of a monolayer of cells that hold a simple internal state and communicate when in contact."
keywords = ["cellular automaton", "kinetic Monte Carlo", "cell signaling", "cell monolayer", "traveling wave"]
categories = ["science", "systems biology"]
repository = "https://github.com/kochanczyk/qeirq"
license = "GPL-3.0-or-later"
version = "1.0.0"
authors = ["https://github.com/kochanczyk/qeirq/CONTRIBUTORS.md"]
edition = "2021"

[dependencies]
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
num_cpus = { version = "1.16" }
threadpool = {version = "1.8" }
png = { version = "0.17" }
cairo-rs = { version = "0.19", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
nom = { version = "7" }
clap = { version = "4", features = ["derive"] }
bytes = { version = "1" }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
